[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/pause/Pause.gd" type="Script" id=1]

[node name="Pause" type="Control"]
pause_mode = 2
margin_right = 360.0
margin_bottom = 640.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="."]
margin_right = 360.0
margin_bottom = 640.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="."]
modulate = Color( 0.5, 0.9, 1.8, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.9503
margin_top = -83.3303
margin_right = -20.9503
margin_bottom = -69.3303
rect_scale = Vector2( 3, 3 )
text = "Pause"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.5
margin_top = -22.0
margin_right = 47.5
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
margin_right = 95.0
margin_bottom = 20.0
text = "Continue"
flat = true

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 95.0
margin_bottom = 44.0
text = "Main Menu"
flat = true

[node name="RestartButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 95.0
margin_bottom = 68.0
text = "Restart Level"
flat = true

[node name="PauseTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
